# dioxus-bevy-experimental

./: Cargo.toml  README.md
bevy-spts-dioxus/: Cargo.toml
bevy-spts-dioxus-core/: Cargo.toml
bevy-spts-dioxus-core/src/: adapter.rs  deferred_system.rs  ecs_hooks.rs  lib.rs  mutations.rs  tick.rs  utils.rs
bevy-spts-dioxus-core/src/hooks/: use_entity.rs
bevy-spts-dioxus-macro/: Cargo.toml
bevy-spts-dioxus-macro/src/: lib.rs
bevy-spts-dioxus-macro/src/generator/: attribute_fns.rs  dioxus_elements.rs  template_node.rs
bevy-spts-dioxus-macro/src/parser/: mod.rs
bevy-spts-dioxus/src/: lib.rs
core/examples/: no_macro.rs
core/src/: adapter.rs  mutations.rs  tick.rs
dioxus-bevy/: Cargo.toml
dioxus-bevy-core/: Cargo.toml
dioxus-bevy-core/src/: adapter.rs  deferred_system.rs  ecs_hooks.rs  lib.rs  mutations.rs  tick.rs
dioxus-bevy-core/src/hooks/: mod.rs  use_entity.rs
dioxus-bevy-macro/: Cargo.toml
dioxus-bevy-macro/src/: lib.rs
dioxus-bevy-macro/src/generator/: dioxus_elements.rs  mod.rs  template_node.rs
dioxus-bevy-macro/src/parser/: element_definition.rs  mod.rs  pre_attribute.rs
dioxus-bevy/src/: lib.rs
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/mesh/: Cargo.toml
examples/mesh/src/: main.rs
macro/: Cargo.toml
macro-core/: Cargo.toml
macro-core/src/: lib.rs
macro-core/tests/: test-macros.rs
macro2/: Cargo.toml
macro2/src/: lib.rs
macro2/tests/: test-macros.rs
playground/: Cargo.toml
playground/examples/: demo.rs
playground/src/: ecs_hooks.rs  elements.rs  lib.rs  mutations.rs  tick.rs
(+10 files in other folders)
