[package]
name = "playground"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = "0.14"
dioxus = { version = "0.5.6", default-features = false, features = ["macro", "signals", "hooks"] }
dioxus-rsx = { default-features = false, version = "0.5.6", features = ["hot_reload"] }

[dev-dependencies]
bevy-inspector-egui = "0.27.0"
